package Nuevo_Modulo_Leccion.logic;

public enum TemaLeccion {
    CONTROL_DE_FLUJO,
    TIPOS_Y_OPERADORES,
    FUNCIONES_Y_METODOS,
    CLASES_Y_ESTRUCTURAS,
    ENTRADA_Y_SALIDA,
    OTRO
}
